Unattached melon and pumpkin stems now wave

--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -1,7 +1,7 @@
 # (some of) block.1 mappings referenced from https://minecraft.fandom.com/wiki/List_of_block_textures#Static and https://static.wikia.nocookie.net/minecraft_gamepedia/images/1/19/Block_overview.png/revision/latest/scale-to-width-down/1000?cb=20200821110146
 # others were referenced by listing through creative menu and setblock autocomplete list
 # diagonal cutouts (transluscent)
-block.1 = crimson_fungus twisting_vines_plant twisting_vines warped_fungus cobweb bamboo_sapling carrots dead_bush kelp_plant kelp dead_tube_coral dead_brain_coral dead_bubble_coral dead_fire_coral dead_horn_coral red_mushroom melon_stem attached_melon_stem pumpkin_stem attached_pumpkin_stem beetroots potatoes nether_wart seagrass tall_seagrass
+block.1 = crimson_fungus twisting_vines_plant twisting_vines warped_fungus cobweb bamboo_sapling carrots dead_bush kelp_plant kelp dead_tube_coral dead_brain_coral dead_bubble_coral dead_fire_coral dead_horn_coral red_mushroom attached_melon_stem attached_pumpkin_stem beetroots potatoes nether_wart seagrass tall_seagrass
 
 # upside-down diagonal cutouts (transluscent)
 block.2 = weeping_vines_plant weeping_vines hanging_roots cave_vines:berries=false cave_vines_plant:berries=false spore_blossom
@@ -35,7 +35,7 @@ block.10 = blue_orchid fern sweet_berry_bush grass warped_roots nether_sprouts l
 block.11 = large_fern:half=upper lilac:half=upper rose_bush:half=upper peony:half=upper tall_grass:half=upper
 
 # stiff wavy stuff (that is also a diagonal up-facing cutout)
-block.12 = dandelion poppy allium azure_bluet red_tulip orange_tulip white_tulip pink_tulip oxeye_daisy cornflower wither_rose tube_coral brain_coral bubble_coral fire_coral horn_coral oak_sapling spruce_sapling birch_sapling jungle_sapling acacia_sapling dark_oak_sapling wheat crimson_roots sunflower:half=lower twilightforest:mayapple twilightforest:twilight_oak_sapling twilightforest:canopy_sapling twilightforest:mangrove_sapling twilightforest:darkwood_sapling twilightforest:hollow_oak_sapling twilightforest:time_sapling twilightforest:transformation_sapling twilightforest:mining_sapling twilightforest:sorting_sapling twilightforest:rainbow_oak_sapling
+block.12 = dandelion poppy allium azure_bluet red_tulip orange_tulip white_tulip pink_tulip oxeye_daisy cornflower wither_rose tube_coral brain_coral bubble_coral fire_coral horn_coral oak_sapling spruce_sapling birch_sapling jungle_sapling acacia_sapling dark_oak_sapling wheat crimson_roots sunflower:half=lower twilightforest:mayapple twilightforest:twilight_oak_sapling twilightforest:canopy_sapling twilightforest:mangrove_sapling twilightforest:darkwood_sapling twilightforest:hollow_oak_sapling twilightforest:time_sapling twilightforest:transformation_sapling twilightforest:mining_sapling twilightforest:sorting_sapling twilightforest:rainbow_oak_sapling melon_stem pumpkin_stem
 
 # stiff two-tall stuff (that is also a diagonal up-facing cutout)
 block.13 = sunflower:half=upper
