--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -83,7 +83,7 @@ screen = <profile> STREAMER_MODE LIGHTNING_FLASHES WATER_STYLE <empty> <empty> [
 
 screen.POST_PROCESSING =  [TONEMAPPING] CONTRAST EXPOSURE POST_SATURATION <empty> <empty> DITHERING_MODE INVISIBILITY_DISTORTION
 screen.SHADOWS = SHADOWS_ENABLED_USER <empty> <empty> <empty> shadowDistance entityShadowDistanceMul shadowMapResolution SHADOW_DISTORTION <empty> <empty> SHADOW_FILTERING SHADOW_FILTERING_RADIUS SHADOW_FILTERING_SAMPLES
-screen.LIGHTING = [LIGHT_STRENGTH] [SSAO_BETA] VANILLA_LIGHTING CUTOUT_ALIGN_STRENGTH <empty> <empty> SUN_TEMP TORCH_TEMP <empty> <empty> ATMOSPHERIC_FOG_USER ATMOSPHERIC_FOG_DENSITY FOG_ENABLED_USER
+screen.LIGHTING = [LIGHT_STRENGTH] [SSAO_BETA] [RIMLIGHT] <empty> <empty> <empty> VANILLA_LIGHTING CUTOUT_ALIGN_STRENGTH <empty> <empty> SUN_TEMP TORCH_TEMP <empty> <empty> ATMOSPHERIC_FOG_USER ATMOSPHERIC_FOG_DENSITY FOG_ENABLED_USER
     screen.SSAO_BETA = AO_MODE AO_INTENSITY
     screen.SSAO_BETA.columns = 1
     screen.SSAO = AO_MODE AO_INTENSITY AO_RADIUS <empty> <empty> <empty> AO_SAMPLES TEMPORAL_UPDATE_SPEED_AO
@@ -93,7 +93,9 @@ screen.COLORS = [TONEMAPPING] [LIGHT_STRENGTH] BOSS_BATTLE_COLORS VANILLA_LIGHTI
     screen.TONEMAPPING.columns = 1
         screen.NIGHT_EFFECT = USE_NIGHT_EFFECT NIGHT_EFFECT_POINT NIGHT_EFFECT_SATURATION
         screen.NIGHT_EFFECT.columns = 1
-screen.MISC = STREAMER_MODE BRIGHT_NETHER LIGHTNING_FLASHES DITHERING_MODE <empty> <empty> INVISIBILITY_DISTORTION BOSS_BATTLE_COLORS NOISY_LAVA SMOOTH_LAVA <empty> <empty> OUTLINE_THROUGH_BLOCKS OUTLINE_COLOR <empty> <empty> [WEATHER] WATER_STYLE
+screen.MISC = [STREAMER_SETTINGS] [RIMLIGHT] [WEATHER] WATER_STYLE <empty> <empty> INVISIBILITY_DISTORTION BOSS_BATTLE_COLORS NOISY_LAVA SMOOTH_LAVA <empty> <empty> OUTLINE_THROUGH_BLOCKS OUTLINE_COLOR
+    screen.STREAMER_SETTINGS = STREAMER_MODE BRIGHT_NETHER LIGHTNING_FLASHES DITHERING_MODE
+    screen.RIMLIGHT = RIMLIGHT_ENABLED RIMLIGHT_MULT <empty> <empty> RIMLIGHT_PIXEL_RADIUS RIMLIGHT_DIST RIMLIGHT_DYNAMIC_RADIUS RIMLIGHT_NORMAL_CORRECTION
     screen.WEATHER = WAVING_ENABLED WIND_STRENGTH_CONSTANT_USER <empty> <empty> NOISY_RAIN RAIN_THICKNESS RAIN_AMOUNT_USER RAIN_TRANSPARENCY <empty> <empty> FOG_ENABLED_USER [DIMENSION_WEATHER] ATMOSPHERIC_FOG_USER ATMOSPHERIC_FOG_DENSITY
         screen.DIMENSION_WEATHER = OVERWORLD_FOGGY_WEATHER NETHER_FOGGY_WEATHER END_FOGGY_WEATHER
         screen.DIMENSION_WEATHER.columns = 1
@@ -103,7 +105,7 @@ screen.ADVANCED = DEBUG_VIEW SHADOW_DEBUG ISOLATE_RENDER_STAGE WATER_FOG <empty>
     screen.EXPERIMENTAL = [RESOURCEPACK] [SSAO] [NIGHT_EFFECT] [FORCED_PERSPECTIVE] <empty> <empty> SHADOW_SUPERSAMPLE SHADOW_AFFECTED_BY_LIGHTMAP PIXELATED_SHADOWS VANILLA_SHADOWS <empty> <empty> END_WARPING FAST_GI
         screen.FORCED_PERSPECTIVE = FORCED_PERSPECTIVE_POWER FORCED_PERSPECTIVE_BIAS FORCED_PERSPECTIVE_SHAPE
     screen.AUTO_ADDED = *
-sliders = CONTRAST EXPOSURE POST_SATURATION EXPOSURE_SAMPLES EXPOSURE_UPDATE_SPEED MIN_EXPOSURE MAX_EXPOSURE EXPOSURE_BOUNDS CUTOUT_ALIGN_STRENGTH MIN_LIGHT_MULT_USER AMBIENT_LIGHT_MULT_USER SUN_LIGHT_MULT_USER SKY_LIGHT_MULT_USER SKY_LIGHT_MULT_OVERCAST_USER MOON_LIGHT_MULT_USER NIGHT_SKY_LIGHT_MULT_USER BLOCK_LIGHT_MULT_USER AO_RADIUS AO_INTENSITY TEMPORAL_UPDATE_SPEED_AO AO_SAMPLES BOUNCE_MULT LIT_MULTIPLIER DIM_LIGHT_DESAT_USER TEMPORAL_UPDATE_SPEED_USER PIXELATED_SHADOWS shadowDistance entityShadowDistanceMul shadowMapResolution SHADOW_DISTORTION SHADOW_FILTERING_RADIUS SHADOW_FILTERING_SAMPLES SUN_TEMP TORCH_TEMP ATMOSPHERIC_FOG_DENSITY SKY_SATURATION SKY_COLOR_BLEND SKY_BRIGHTNESS_USER STAR_WEIGHTS POST_TEMP VANILLA_COLORS NIGHT_EFFECT_POINT NIGHT_EFFECT_SATURATION COLORS_SATURATION COLORS_CONTRAST COLORS_CONTRAST_BRIGHT_BIAS COLORS_SATURATION_WEIGHTS_RED COLORS_SATURATION_WEIGHTS_GREEN COLORS_SATURATION_WEIGHTS_BLUE LIGHTNING_FLASHES END_WARPING WIND_STRENGTH_CONSTANT_USER RAIN_AMOUNT_USER RAIN_TRANSPARENCY TEX_RES ISOLATE_RENDER_STAGE END_SKY_RESOLUTION FORCED_PERSPECTIVE_POWER FORCED_PERSPECTIVE_BIAS FORCED_PERSPECTIVE_SHAPE
+sliders = CONTRAST EXPOSURE POST_SATURATION EXPOSURE_SAMPLES EXPOSURE_UPDATE_SPEED MIN_EXPOSURE MAX_EXPOSURE EXPOSURE_BOUNDS CUTOUT_ALIGN_STRENGTH MIN_LIGHT_MULT_USER AMBIENT_LIGHT_MULT_USER SUN_LIGHT_MULT_USER SKY_LIGHT_MULT_USER SKY_LIGHT_MULT_OVERCAST_USER MOON_LIGHT_MULT_USER NIGHT_SKY_LIGHT_MULT_USER BLOCK_LIGHT_MULT_USER AO_RADIUS AO_INTENSITY TEMPORAL_UPDATE_SPEED_AO AO_SAMPLES BOUNCE_MULT LIT_MULTIPLIER DIM_LIGHT_DESAT_USER TEMPORAL_UPDATE_SPEED_USER PIXELATED_SHADOWS shadowDistance entityShadowDistanceMul shadowMapResolution SHADOW_DISTORTION SHADOW_FILTERING_RADIUS SHADOW_FILTERING_SAMPLES SUN_TEMP TORCH_TEMP ATMOSPHERIC_FOG_DENSITY SKY_SATURATION SKY_COLOR_BLEND SKY_BRIGHTNESS_USER STAR_WEIGHTS POST_TEMP VANILLA_COLORS NIGHT_EFFECT_POINT NIGHT_EFFECT_SATURATION RIMLIGHT_MULT RIMLIGHT_PIXEL_RADIUS LIGHTNING_FLASHES END_WARPING WIND_STRENGTH_CONSTANT_USER RAIN_AMOUNT_USER RAIN_TRANSPARENCY TEX_RES ISOLATE_RENDER_STAGE END_SKY_RESOLUTION FORCED_PERSPECTIVE_POWER FORCED_PERSPECTIVE_BIAS FORCED_PERSPECTIVE_SHAPE
 
 # profile.CONTENT = STREAMER_MODE:0 !USE_LUT USER_LMT_MODE:3 AO_INTENSITY:2.0 ATMOSPHERIC_FOG_DENSITY:0.00075 CONTRAST:0.1 POST_SATURATION:1.1 DITHERING_MODE:0 LIGHTNING_FLASHES:0.1 INVISIBILITY_DISTORTION WAVING_ENABLED WIND_STRENGTH_CONSTANT_USER:0.3 RAIN_AMOUNT_USER:0.0 RAIN_THICKNESS:0.5 BRIGHT_NETHER
 
