Changed skyTime to custom uniform

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -79,6 +79,8 @@ uniform.float.directLightMult=3.4 / sqrt(maxRainFogSmooth + 1) - 2.4
 
 uniform.float.eyeBrightnessSmoothFloat=smooth(if(playerMood < 0.1, 1, 0), 40, 40)
 
+uniform.float.skyTime=clamp(sin(2 * pi * (worldTime + 785) / 24000) + 0.5, 0, 1)
+
 screen = <profile> STREAMER_MODE LIGHTNING_FLASHES WATER_STYLE <empty> <empty> [SHADOWS] [LIGHTING] [COLORS] [POST_PROCESSING] [MISC] [ADVANCED]
 
 screen.POST_PROCESSING =  [TONEMAPPING] CONTRAST EXPOSURE POST_SATURATION <empty> <empty> DITHERING_MODE INVISIBILITY_DISTORTION
