--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -51,6 +51,8 @@ variable.float.isInvisible=if(is_invisible, 1, -0.1)
 variable.float.isNotSpectator=smooth(if(isSpectator, 0, 1), 2, 0)
 uniform.float.invisibility=clamp(smooth(isInvisible * isNotSpectator, 2, 2), 0, 1)
 
+uniform.float.blindnessSmooth=smooth(blindness, 0, 0.2)
+
 # 2 * PI / 8 evaluates to 0.785398163397
 uniform.float.moonBrightness=cos(moonPhase * 0.785398163397) * 0.3 + 0.7
 # uniform.float.moonBrightness=0
