--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -79,7 +79,7 @@ variable.float.maxRainFogSmooth=smooth(max(rainStrength, fogWeather), 0.5, 0.5)
 uniform.float.directLightMult=3.4 / sqrt(maxRainFogSmooth + 1) - 2.4
 # uniform.float.directLightMult=if(hasCeiling, 0, 1)
 
-uniform.float.eyeBrightnessSmoothFloat=smooth(if(playerMood < 0.1, 1, 0), 40, 40)
+uniform.float.eyeBrightnessSmoothFloat=smooth(inSky, 40, 40)
 
 uniform.float.skyTime=clamp(sin(2 * pi * (worldTime + 785) / 24000) + 0.5, 0, 1)
 
