Added option for corner outlines

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -99,7 +99,7 @@ screen.COLORS = [TONEMAPPING] [LIGHT_STRENGTH] BOSS_BATTLE_COLORS VANILLA_LIGHTI
         screen.NIGHT_EFFECT.columns = 1
 screen.MISC = [STREAMER_SETTINGS] [RIMLIGHT] [WEATHER] WATER_STYLE <empty> <empty> INVISIBILITY_DISTORTION BOSS_BATTLE_COLORS NOISY_LAVA SMOOTH_LAVA <empty> <empty> OUTLINE_THROUGH_BLOCKS OUTLINE_COLOR
     screen.STREAMER_SETTINGS = STREAMER_MODE BRIGHT_NETHER LIGHTNING_FLASHES DITHERING_MODE
-    screen.RIMLIGHT = RIMLIGHT_ENABLED RIMLIGHT_MULT <empty> <empty> RIMLIGHT_PIXEL_RADIUS RIMLIGHT_DIST RIMLIGHT_DYNAMIC_RADIUS RIMLIGHT_NORMAL_CORRECTION
+    screen.RIMLIGHT = RIMLIGHT_ENABLED RIMLIGHT_MULT <empty> <empty> RIMLIGHT_PIXEL_RADIUS RIMLIGHT_DIST RIMLIGHT_DYNAMIC_RADIUS RIMLIGHT_OUTLINE
     screen.WEATHER = [WIND] [RAIN] [FOG] <empty> [DIMENSION_WEATHER]
     screen.WEATHER.columns = 1
     screen.WIND = WAVING_ENABLED WIND_STRENGTH_CONSTANT_USER <empty> <empty> <empty> <empty> WAVING_WATER_ENABLED WAVING_RAIN_ENABLED WAVING_FULL_BLOCKS_ENABLED
