Added pano world option

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -16,7 +16,7 @@ beacon.beam.depth=true
 
 separateAo=true
 
-frustum.culling=true
+frustum.culling=false
 shadow.culling=true
 
 shadowTerrain=true
@@ -113,7 +113,7 @@ screen.MISC = [STREAMER_SETTINGS] [RIMLIGHT] [WEATHER] WATER_STYLE <empty> <empt
     screen.RESOURCEPACK = TEX_RES TEX_RENDER
     screen.RESOURCEPACK.columns = 1
 screen.ADVANCED = DEBUG_VIEW SHADOW_DEBUG ISOLATE_RENDER_STAGE WATER_FOG <empty> <empty> SHADOW_TRANSITION_MIXING END_SKY_RESOLUTION HDR_TEX_LIGHT_BRIGHTNESS CLOUD_EXTENSION <empty> <empty> [EXPERIMENTAL] [AUTO_ADDED]
-    screen.EXPERIMENTAL = [RESOURCEPACK] [SSAO] [NIGHT_EFFECT] [FORCED_PERSPECTIVE] <empty> <empty> SHADOW_SUPERSAMPLE SHADOW_AFFECTED_BY_LIGHTMAP VANILLA_SHADOWS PIXELATED_SHADOWS_USER <empty> <empty> END_WARPING FAST_GI
+    screen.EXPERIMENTAL = [RESOURCEPACK] [SSAO] [NIGHT_EFFECT] [FORCED_PERSPECTIVE] <empty> <empty> SHADOW_SUPERSAMPLE SHADOW_AFFECTED_BY_LIGHTMAP VANILLA_SHADOWS PIXELATED_SHADOWS_USER <empty> <empty> END_WARPING FAST_GI PANORAMIC_WORLD
         screen.FORCED_PERSPECTIVE = FORCED_PERSPECTIVE_POWER FORCED_PERSPECTIVE_BIAS FORCED_PERSPECTIVE_SHAPE
     screen.AUTO_ADDED = *
 sliders = CONTRAST LUMINANCE_CONTRAST EXPOSURE POST_SATURATION EXPOSURE_SAMPLES EXPOSURE_UPDATE_SPEED MIN_EXPOSURE MAX_EXPOSURE EXPOSURE_BOUNDS CUTOUT_ALIGN_STRENGTH MIN_LIGHT_MULT_USER AMBIENT_LIGHT_MULT_USER SUN_LIGHT_MULT_USER SKY_LIGHT_MULT_USER SKY_LIGHT_MULT_OVERCAST_USER MOON_LIGHT_MULT_USER NIGHT_SKY_LIGHT_MULT_USER BLOCK_LIGHT_MULT_USER AO_RADIUS AO_INTENSITY TEMPORAL_UPDATE_SPEED_AO AO_SAMPLES BOUNCE_MULT LIT_MULTIPLIER DIM_LIGHT_DESAT_USER TEMPORAL_UPDATE_SPEED_USER PIXELATED_SHADOWS_USER shadowDistance entityShadowDistanceMul shadowMapResolution SHADOW_DISTORTION SHADOW_FILTERING_RADIUS SHADOW_FILTERING_SAMPLES SUN_TEMP TORCH_TEMP ATMOSPHERIC_FOG_DENSITY SKY_SATURATION SKY_COLOR_BLEND SKY_BRIGHTNESS_USER STAR_WEIGHTS POST_TEMP VANILLA_COLORS NIGHT_EFFECT_POINT NIGHT_EFFECT_SATURATION RIMLIGHT_MULT RIMLIGHT_PIXEL_RADIUS LIGHTNING_FLASHES END_WARPING WIND_STRENGTH_CONSTANT_USER RAIN_THICKNESS RAIN_AMOUNT_USER RAIN_TRANSPARENCY TEX_RES ISOLATE_RENDER_STAGE END_SKY_RESOLUTION CLOUD_EXTENSION FORCED_PERSPECTIVE_POWER FORCED_PERSPECTIVE_BIAS FORCED_PERSPECTIVE_SHAPE
