Fix frustum culling, modify pano world look

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -16,7 +16,7 @@ beacon.beam.depth=true
 
 separateAo=true
 
-frustum.culling=false
+frustum.culling=true
 shadow.culling=true
 
 shadowTerrain=true
