Wind now affects foliage in snowy areas

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -66,7 +66,7 @@ uniform.float.isLightning=isLightningSharp * 0.9 + isLightningSmooth * 0.1
 # uniform.float.isLightning=if(skyBrightness > smoothSky + 0.1, 1, 0)
 # uniform.float.isLightning=1
 
-uniform.float.rainWind=smooth(if(in(biome_precipitation, 2), 0, 1), 4, 4)
+uniform.float.rainWind=smooth(if(in(biome_precipitation, PPT_SNOW), 0, 1), 4, 4)
 
 variable.float.worldDayTime=worldDay + worldTime / 24000
 uniform.float.inSky=smooth(clamp(eyeBrightness.y / 100, 0, 1), 10, 3)
@@ -98,7 +98,7 @@ screen.COLORS = [TONEMAPPING] [LIGHT_STRENGTH] BOSS_BATTLE_COLORS VANILLA_LIGHTI
         screen.NIGHT_EFFECT = USE_NIGHT_EFFECT NIGHT_EFFECT_POINT NIGHT_EFFECT_SATURATION
         screen.NIGHT_EFFECT.columns = 1
 screen.MISC = [STREAMER_SETTINGS] [RIMLIGHT] [WEATHER] WATER_STYLE <empty> <empty> INVISIBILITY_DISTORTION BOSS_BATTLE_COLORS NOISY_LAVA SMOOTH_LAVA <empty> <empty> OUTLINE_THROUGH_BLOCKS OUTLINE_COLOR
-    screen.STREAMER_SETTINGS = STREAMER_MODE BRIGHT_NETHER LIGHTNING_FLASHES DITHERING_MODE
+    screen.STREAMER_SETTINGS = STREAMER_MODE BRIGHT_NETHER LIGHTNING_FLASHES DITHERING_MODE <empty> <empty> RAIN_THICKNESS RAIN_TRANSPARENCY
     screen.RIMLIGHT = RIMLIGHT_ENABLED RIMLIGHT_MULT <empty> <empty> RIMLIGHT_PIXEL_RADIUS RIMLIGHT_DIST RIMLIGHT_DYNAMIC_RADIUS RIMLIGHT_OUTLINE
     screen.WEATHER = [WIND] [RAIN] [FOG] <empty> [DIMENSION_WEATHER]
     screen.WEATHER.columns = 1
