--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -66,7 +66,8 @@ uniform.float.isLightning=isLightningSharp * 0.9 + isLightningSmooth * 0.1
 # uniform.float.isLightning=if(skyBrightness > smoothSky + 0.1, 1, 0)
 # uniform.float.isLightning=1
 
-uniform.float.rainWind=smooth(if(in(biome_precipitation, PPT_SNOW), 0, 1), 4, 4)
+uniform.float.rainWindSharp=if(in(biome_precipitation, PPT_SNOW), 0, 1)
+uniform.float.rainWind=smooth(rainWindSharp, 4, 4)
 
 variable.float.worldDayTime=worldDay + worldTime / 24000
 uniform.float.inSky=smooth(clamp(eyeBrightness.y / 100, 0, 1), 10, 3)
