Add lightning strike lighting, proper shadow-vanilla lighting transition in shadow boundary

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -130,9 +130,7 @@ profile.THREE = profile.TWO VANILLA_LIGHTING:2 CUTOUT_ALIGN_STRENGTH:0.8 SKY_COL
 
 program.shadow.enabled=SHADOWS_ENABLED_USER
 
-# shadowcomp doesn't exist intentionally, it acts as shadowcomp_pre since that program isn't provided by optifine
+# shadowcomp intentionally does not exist, it acts as shadowcomp_pre since that program isn't provided by optifine
 flip.shadowcomp1.colortex1=true
 
 flip.deferred.colortex0=false
-program.shadowcomp.enabled=SHADOWS_ENABLED_USER
-program.composite.enabled=SHADOWS_ENABLED_USER
