Add multiplicative transparency, better water fog

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -43,6 +43,7 @@ texture.composite.shadowcolor1=/LUTs/lut.dat TEXTURE_3D RGB16F 65 65 65 RGB FLOA
 
 
 blend.gbuffers_armor_glint = ONE ONE ONE ONE
+# blend.deferred1 = ZERO ONE ONE ONE
 
 
 
