Added 1.20 blocks to block.properties
Cherry leaves, pitcher plants (when not on farmland), torchflowers, pink petals, and cherry saplings now wave in the wind
Torchflowers now glow very subtly when "Convert Light Sources to HDR" is enabled, similar to amethyst
Calibrated sculk sensors now glow properly when activated

--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -26,7 +26,7 @@ block.6 = lava_cauldron campfire:lit=true jack_o_lantern torch wall_torch blast_
 block.8 = cave_vines:berries=true cave_vines_plant:berries=true twilightforest:torchberry_plant:has_torchberries=true
 
 # little *s that don't want to cooperate with the lightmap
-block.9 = magma_block sculk_sensor:sculk_sensor_phase=active
+block.9 = magma_block sculk_sensor:sculk_sensor_phase=active calibrated_sculk_sensor:sculk_sensor_phase=active
 
 # wavy stuff (that is also a diagonal up-facing cutout)
 block.10 = blue_orchid fern grass warped_roots nether_sprouts lily_of_the_valley large_fern:half=lower lilac:half=lower rose_bush:half=lower peony:half=lower tall_grass:half=lower twilightforest:fiddlehead twilightforest:thorn_rose
@@ -35,13 +35,13 @@ block.10 = blue_orchid fern grass warped_roots nether_sprouts lily_of_the_valley
 block.11 = large_fern:half=upper lilac:half=upper rose_bush:half=upper peony:half=upper tall_grass:half=upper
 
 # stiff wavy stuff (that is also a diagonal up-facing cutout)
-block.12 = dandelion sweet_berry_bush poppy allium azure_bluet red_tulip orange_tulip white_tulip pink_tulip oxeye_daisy cornflower wither_rose tube_coral brain_coral bubble_coral fire_coral horn_coral oak_sapling spruce_sapling birch_sapling jungle_sapling acacia_sapling dark_oak_sapling wheat crimson_roots melon_stem pumpkin_stem sunflower:half=lower twilightforest:mayapple twilightforest:twilight_oak_sapling twilightforest:canopy_sapling twilightforest:mangrove_sapling twilightforest:darkwood_sapling twilightforest:hollow_oak_sapling twilightforest:time_sapling twilightforest:transformation_sapling twilightforest:mining_sapling twilightforest:sorting_sapling twilightforest:rainbow_oak_sapling
+block.12 = dandelion sweet_berry_bush poppy allium azure_bluet red_tulip orange_tulip white_tulip pink_tulip oxeye_daisy cornflower wither_rose tube_coral brain_coral bubble_coral fire_coral horn_coral oak_sapling spruce_sapling birch_sapling jungle_sapling acacia_sapling dark_oak_sapling cherry_sapling wheat crimson_roots melon_stem pumpkin_stem sunflower:half=lower pitcher_plant:half=lower twilightforest:mayapple twilightforest:twilight_oak_sapling twilightforest:canopy_sapling twilightforest:mangrove_sapling twilightforest:darkwood_sapling twilightforest:hollow_oak_sapling twilightforest:time_sapling twilightforest:transformation_sapling twilightforest:mining_sapling twilightforest:sorting_sapling twilightforest:rainbow_oak_sapling
 
 # stiff two-tall stuff (that is also a diagonal up-facing cutout)
-block.13 = sunflower:half=upper
+block.13 = sunflower:half=upper pitcher_plant:half=upper
 
 # wavy stuff (that is not a cutout)
-block.14 = twilightforest:giant_leaves
+block.14 = twilightforest:giant_leaves cherry_leaves
 
 # stiff wavy stuff (that is not a cutout)
 block.15 = oak_leaves spruce_leaves birch_leaves jungle_leaves acacia_leaves dark_oak_leaves mangrove_leaves azalea_leaves flowering_azalea_leaves twilightforest:beanstalk_leaves twilightforest:thorn_leaves twilightforest:twilight_oak_leaves twilightforest:canopy_leaves twilightforest:mangrove_leaves twilightforest:time_leaves twilightforest:transformation_leaves twilightforest:mining_leaves twilightforest:sorting_leaves twilightforest:rainbow_oak_leaves
@@ -53,7 +53,10 @@ block.16 = water flowing_water
 block.17 = lava flowing_lava
 
 # glowing wavy cutouts
-block.18 = fire:east=false:north=false:south=false:west=false soul_fire
+block.18 = torchflower fire:east=false:north=false:south=false:west=false soul_fire
+
+# wavy cutouts that aren't up-facing diagonals
+block.19 = pink_petals
 
 # overrides for certain blocks (Iris doesn't support multiple comma-separated blockstate values, so we make do with this)
 block.0 = redstone_wire:power=0 respawn_anchor:charges=0
