--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -114,9 +114,9 @@ screen.MISC = [STREAMER_SETTINGS] [RIMLIGHT] [FADEOUT] [WEATHER] <empty> <empty>
     screen.WEATHER.columns = 1
         screen.WIND = WAVING_ENABLED WIND_STRENGTH_CONSTANT_USER WAVE_STRENGTH_CONSTANT_USER <empty> <empty> <empty> WAVING_WATER_ENABLED WAVING_RAIN_ENABLED WAVING_FULL_BLOCKS_ENABLED
         screen.WIND.columns = 3
-        screen.RAIN = NOISY_RAIN RAIN_AMOUNT_USER <empty> <empty> RAIN_THICKNESS RAIN_TRANSPARENCY
+        screen.RAIN = NOISY_RAIN RAIN_AMOUNT_USER <empty> <empty> RAIN_THICKNESS RAIN_TRANSPARENCY <empty> <empty> RAIN_FOG
         screen.RAIN.columns = 2
-        screen.FOG = FOG_ENABLED_USER <empty> <empty> <empty> ATMOSPHERIC_FOG_USER ATMOSPHERIC_FOG_DENSITY <empty> <empty> SECONDARY_FOG <empty> SECONDARY_FOG_START SECONDARY_FOG_END
+        screen.FOG = FOG_ENABLED_USER RAIN_FOG <empty> <empty> ATMOSPHERIC_FOG_USER ATMOSPHERIC_FOG_DENSITY <empty> <empty> SECONDARY_FOG <empty> SECONDARY_FOG_START SECONDARY_FOG_END
         screen.FOG.columns = 2
             screen.DIMENSION_WEATHER = OVERWORLD_FOGGY_WEATHER NETHER_FOGGY_WEATHER END_FOGGY_WEATHER
             screen.DIMENSION_WEATHER.columns = 1
