Moved weather settings from extras to main menu

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -89,7 +89,7 @@ uniform.float.eyeBrightnessSmoothFloat=smooth(inSky, 40, 40)
 
 uniform.float.skyTime=clamp(sin(2 * pi * (worldTime - 785) / 24000) + 0.5, 0, 1)
 
-screen = <profile> TEX_RES STREAMER_MODE LIGHTNING_FLASHES <empty> <empty> [SHADOWS] [LIGHTING] [COLORS] [POST_PROCESSING] [MISC] [ADVANCED]
+screen = <profile> TEX_RES STREAMER_MODE LIGHTNING_FLASHES <empty> <empty> [SHADOWS] [LIGHTING] [COLORS] [POST_PROCESSING] [MISC] [WEATHER] <empty> <empty> [ADVANCED]
 
 screen.POST_PROCESSING =  [TONEMAPPING] LUMINANCE_CONTRAST EXPOSURE POST_SATURATION <empty> <empty> DITHERING_MODE INVISIBILITY_DISTORTION
 screen.SHADOWS = SHADOWS_ENABLED_USER <empty> <empty> <empty> shadowDistance entityShadowDistanceMul shadowMapResolution SHADOW_DISTORTION <empty> <empty> SHADOW_FILTERING SHADOW_FILTERING_RADIUS SHADOW_FILTERING_SAMPLES
@@ -103,25 +103,25 @@ screen.COLORS = [TONEMAPPING] [LIGHT_STRENGTH] BOSS_BATTLE_COLORS VANILLA_LIGHTI
     screen.TONEMAPPING.columns = 1
         screen.NIGHT_EFFECT = USE_NIGHT_EFFECT NIGHT_EFFECT_POINT NIGHT_EFFECT_SATURATION
         screen.NIGHT_EFFECT.columns = 1
-screen.MISC = [STREAMER_SETTINGS] [RIMLIGHT] [FADEOUT] [WEATHER] <empty> <empty> WATER_STYLE <empty> INVISIBILITY_DISTORTION BOSS_BATTLE_COLORS NOISY_LAVA SMOOTH_LAVA <empty> <empty> OUTLINE_THROUGH_BLOCKS OUTLINE_COLOR
+screen.MISC = [STREAMER_SETTINGS] <empty> [RIMLIGHT] [FADEOUT] <empty> <empty> WATER_STYLE <empty> INVISIBILITY_DISTORTION BOSS_BATTLE_COLORS NOISY_LAVA SMOOTH_LAVA <empty> <empty> OUTLINE_THROUGH_BLOCKS OUTLINE_COLOR
     screen.STREAMER_SETTINGS = STREAMER_MODE BRIGHT_NETHER LIGHTNING_FLASHES DITHERING_MODE <empty> <empty> RAIN_THICKNESS RAIN_TRANSPARENCY
     screen.STREAMER_SETTINGS.columns = 2
     screen.RIMLIGHT = RIMLIGHT_ENABLED RIMLIGHT_MULT <empty> <empty> RIMLIGHT_PIXEL_RADIUS RIMLIGHT_DIST RIMLIGHT_DYNAMIC_RADIUS RIMLIGHT_OUTLINE
     screen.RIMLIGHT.columns = 2
     screen.FADEOUT = CLOSE_FADE_OUT <empty> <empty> <empty> CLOSE_FADE_OUT_FULL FADE_OUT_RADIUS
     screen.FADEOUT.columns = 2
-    screen.WEATHER = [WIND] [RAIN] [FOG] <empty> [DIMENSION_WEATHER]
-    screen.WEATHER.columns = 1
-        screen.WIND = WAVING_ENABLED WIND_STRENGTH_CONSTANT_USER WAVE_STRENGTH_CONSTANT_USER <empty> <empty> <empty> WAVING_WATER_ENABLED WAVING_RAIN_ENABLED WAVING_FULL_BLOCKS_ENABLED
-        screen.WIND.columns = 3
-        screen.RAIN = NOISY_RAIN RAIN_AMOUNT_USER <empty> <empty> RAIN_THICKNESS RAIN_TRANSPARENCY <empty> <empty> RAIN_FOG
-        screen.RAIN.columns = 2
-        screen.FOG = FOG_ENABLED_USER RAIN_FOG <empty> <empty> ATMOSPHERIC_FOG_USER ATMOSPHERIC_FOG_DENSITY <empty> <empty> SECONDARY_FOG <empty> SECONDARY_FOG_START SECONDARY_FOG_END
-        screen.FOG.columns = 2
-            screen.DIMENSION_WEATHER = OVERWORLD_FOGGY_WEATHER NETHER_FOGGY_WEATHER END_FOGGY_WEATHER
-            screen.DIMENSION_WEATHER.columns = 1
     screen.RESOURCEPACK = TEX_RES TEX_RENDER
     screen.RESOURCEPACK.columns = 1
+screen.WEATHER = [WIND] [RAIN] [FOG] <empty> [DIMENSION_WEATHER]
+screen.WEATHER.columns = 1
+    screen.WIND = WAVING_ENABLED WIND_STRENGTH_CONSTANT_USER WAVE_STRENGTH_CONSTANT_USER <empty> <empty> <empty> WAVING_WATER_ENABLED WAVING_RAIN_ENABLED WAVING_FULL_BLOCKS_ENABLED
+    screen.WIND.columns = 3
+    screen.RAIN = NOISY_RAIN RAIN_AMOUNT_USER <empty> <empty> RAIN_THICKNESS RAIN_TRANSPARENCY <empty> <empty> RAIN_FOG
+    screen.RAIN.columns = 2
+    screen.FOG = FOG_ENABLED_USER RAIN_FOG <empty> <empty> ATMOSPHERIC_FOG_USER ATMOSPHERIC_FOG_DENSITY <empty> <empty> SECONDARY_FOG <empty> SECONDARY_FOG_START SECONDARY_FOG_END
+    screen.FOG.columns = 2
+        screen.DIMENSION_WEATHER = OVERWORLD_FOGGY_WEATHER NETHER_FOGGY_WEATHER END_FOGGY_WEATHER
+        screen.DIMENSION_WEATHER.columns = 1
 screen.ADVANCED = SHADOW_TRANSITION_MIXING END_SKY_RESOLUTION HDR_TEX_LIGHT_BRIGHTNESS CLOUD_EXTENSION INVISIBILITY_DISTORT_STRENGTH TEXTURE_FILTERING <empty> <empty> [EXPERIMENTAL] [AUTO_ADDED] [DEBUG]
     screen.DEBUG = DEBUG_VIEW SHADOW_DEBUG ISOLATE_RENDER_STAGE <empty> <empty> <empty> DISABLE_WATER WATER_FOG 
     screen.EXPERIMENTAL = [RESOURCEPACK] [SSAO] [NIGHT_EFFECT] [FORCED_PERSPECTIVE] <empty> <empty> SHADOW_SUPERSAMPLE SHADOW_AFFECTED_BY_LIGHTMAP VANILLA_SHADOWS PIXELATED_SHADOWS_USER <empty> <empty> END_WARPING FAST_GI PANORAMIC_WORLD TEXTURE_FILTER_EVERYTHING
