--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -112,8 +112,8 @@ screen.MISC = [STREAMER_SETTINGS] <empty> [RIMLIGHT] [FADEOUT] <empty> <empty> W
     screen.FADEOUT.columns = 2
     screen.RESOURCEPACK = TEX_RES TEX_RENDER
     screen.RESOURCEPACK.columns = 1
-screen.WEATHER = [WIND] [RAIN] [FOG] <empty> [DIMENSION_WEATHER]
-screen.WEATHER.columns = 1
+screen.WEATHER = [WIND] [RAIN] [FOG] <empty> <empty> <empty> <empty> [DIMENSION_WEATHER]
+screen.WEATHER.columns = 3
     screen.WIND = WAVING_ENABLED WIND_STRENGTH_CONSTANT_USER WAVE_STRENGTH_CONSTANT_USER <empty> <empty> <empty> WAVING_WATER_ENABLED WAVING_RAIN_ENABLED WAVING_FULL_BLOCKS_ENABLED
     screen.WIND.columns = 3
     screen.RAIN = NOISY_RAIN RAIN_AMOUNT_USER <empty> <empty> RAIN_THICKNESS RAIN_TRANSPARENCY <empty> <empty> RAIN_FOG
