Got 3D noise layers working
All noise textures are now a part of a single 3D texture
As a result, fixed issue where noise textures would act weirdly when looping

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -31,14 +31,16 @@ separateEntityDraws=false
 
 alphaTest.gbuffers_skytextured=LEQUAL 0.001
 
-# texture.noise = /tex/noise/LDR_RGBA_0.png
-texture.noise = /tex/noise/combined.png
+# texture.noise=/tex/noise/constituents/stippling.png
+
+texture.gbuffers.noisetex=/tex/noise/combined.dat TEXTURE_3D RGBA8 512 512 7 RGBA UNSIGNED_BYTE
+texture.deferred.noisetex=/tex/noise/combined.dat TEXTURE_3D RGBA8 512 512 7 RGBA UNSIGNED_BYTE
+texture.composite.noisetex=/tex/noise/combined.dat TEXTURE_3D RGBA8 512 512 7 RGBA UNSIGNED_BYTE
 
 texture.gbuffers.shadowcolor0=minecraft:dynamic/lightmap_1
 texture.deferred.shadowcolor0=minecraft:dynamic/lightmap_1
-texture.composite.shadowcolor1=/LUTs/lut.dat TEXTURE_3D RGB16F 65 65 65 RGB FLOAT
-# texture.composite.shadowcolor1=/LUTs/lut.png
 
+texture.composite.shadowcolor1=/LUTs/lut.dat TEXTURE_3D RGB16F 65 65 65 RGB FLOAT
 
 
 
