--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -93,7 +93,7 @@ uniform.float.skyTime=clamp(sin(2 * pi * (worldTime - 785) / 24000) + 0.5, 0, 1)
 
 screen = <profile> TEX_RES STREAMER_MODE LIGHTNING_FLASHES <empty> <empty> [SHADOWS] [LIGHTING] [COLORS] [POST_PROCESSING] [MISC] [WEATHER] <empty> <empty> [ADVANCED]
 
-screen.POST_PROCESSING =  [TONEMAPPING] LUMINANCE_CONTRAST EXPOSURE POST_SATURATION <empty> <empty> DITHERING_MODE INVISIBILITY_DISTORTION
+screen.POST_PROCESSING =  [TONEMAPPING] LUMINANCE_CONTRAST EXPOSURE POST_SATURATION <empty> <empty> AA_MODE DITHERING_MODE INVISIBILITY_DISTORTION
 screen.SHADOWS = SHADOWS_ENABLED_USER <empty> <empty> <empty> shadowDistance entityShadowDistanceMul shadowMapResolution SHADOW_DISTORTION <empty> <empty> SHADOW_FILTERING SHADOW_FILTERING_RADIUS SHADOW_FILTERING_SAMPLES
 screen.LIGHTING = [LIGHT_STRENGTH] [SSAO_BETA] [RIMLIGHT] [FOG] <empty> <empty> VANILLA_LIGHTING CUTOUT_ALIGN_STRENGTH <empty> <empty> SUN_TEMP TORCH_TEMP
     screen.SSAO_BETA = AO_MODE AO_INTENSITY
