Added preset settings for AA modes

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -105,7 +105,7 @@ screen.COLORS = [TONEMAPPING] [LIGHT_STRENGTH] BOSS_BATTLE_COLORS VANILLA_LIGHTI
     screen.TONEMAPPING.columns = 1
         screen.NIGHT_EFFECT = USE_NIGHT_EFFECT NIGHT_EFFECT_POINT NIGHT_EFFECT_SATURATION
         screen.NIGHT_EFFECT.columns = 1
-screen.MISC = [STREAMER_SETTINGS] <empty> [RIMLIGHT] [FADEOUT] <empty> <empty> WATER_STYLE <empty> INVISIBILITY_DISTORTION BOSS_BATTLE_COLORS NOISY_LAVA SMOOTH_LAVA <empty> <empty> OUTLINE_THROUGH_BLOCKS OUTLINE_COLOR
+screen.MISC = [STREAMER_SETTINGS] [RIMLIGHT] [FADEOUT] <empty> <empty> <empty> WATER_STYLE <empty> INVISIBILITY_DISTORTION BOSS_BATTLE_COLORS NOISY_LAVA SMOOTH_LAVA <empty> <empty> OUTLINE_THROUGH_BLOCKS OUTLINE_COLOR
     screen.STREAMER_SETTINGS = STREAMER_MODE BRIGHT_NETHER LIGHTNING_FLASHES DITHERING_MODE <empty> <empty> RAIN_THICKNESS RAIN_TRANSPARENCY
     screen.STREAMER_SETTINGS.columns = 2
     screen.RIMLIGHT = RIMLIGHT_ENABLED RIMLIGHT_MULT <empty> <empty> RIMLIGHT_PIXEL_RADIUS RIMLIGHT_DIST RIMLIGHT_DYNAMIC_RADIUS RIMLIGHT_OUTLINE
@@ -124,7 +124,7 @@ screen.WEATHER.columns = 3
     screen.FOG.columns = 2
         screen.DIMENSION_WEATHER = OVERWORLD_FOGGY_WEATHER NETHER_FOGGY_WEATHER END_FOGGY_WEATHER
         screen.DIMENSION_WEATHER.columns = 1
-screen.ADVANCED = SHADOW_TRANSITION_MIXING END_SKY_RESOLUTION HDR_TEX_LIGHT_BRIGHTNESS CLOUD_EXTENSION INVISIBILITY_DISTORT_STRENGTH TEXTURE_FILTERING <empty> <empty> [EXPERIMENTAL] [AUTO_ADDED] [DEBUG]
+screen.ADVANCED = [EXPERIMENTAL] [AUTO_ADDED] [DEBUG] <empty> <empty> <empty> SHADOW_TRANSITION_MIXING END_SKY_RESOLUTION HDR_TEX_LIGHT_BRIGHTNESS CLOUD_EXTENSION INVISIBILITY_DISTORT_STRENGTH
     screen.DEBUG = DEBUG_VIEW SHADOW_DEBUG ISOLATE_RENDER_STAGE <empty> <empty> <empty> DISABLE_WATER WATER_FOG 
     screen.EXPERIMENTAL = [RESOURCEPACK] [SSAO] [NIGHT_EFFECT] [FORCED_PERSPECTIVE] <empty> <empty> SHADOW_SUPERSAMPLE SHADOW_AFFECTED_BY_LIGHTMAP VANILLA_SHADOWS PIXELATED_SHADOWS_USER <empty> <empty> END_WARPING FAST_GI PANORAMIC_WORLD TEXTURE_FILTER_EVERYTHING
         screen.FORCED_PERSPECTIVE = FORCED_PERSPECTIVE_POWER FORCED_PERSPECTIVE_BIAS FORCED_PERSPECTIVE_SHAPE
