Added player wind wake

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -91,6 +91,11 @@ uniform.float.eyeBrightnessSmoothFloat=smooth(inSky, 40, 40)
 
 uniform.float.skyTime=clamp(sin(2 * pi * (worldTime - 785) / 24000) + 0.5, 0, 1)
 
+variable.float.cameraDiffSmoothX=smooth(clamp((cameraPosition.x - previousCameraPosition.x) / frameTime, -10.0, 10.0), 6.0, 6.0)
+variable.float.cameraDiffSmoothY=smooth(clamp((cameraPosition.y - previousCameraPosition.y) / frameTime, -10.0, 10.0), 6.0, 6.0)
+variable.float.cameraDiffSmoothZ=smooth(clamp((cameraPosition.z - previousCameraPosition.z) / frameTime, -10.0, 10.0), 6.0, 6.0)
+uniform.vec3.cameraDiffSmooth=vec3(cameraDiffSmoothX, cameraDiffSmoothY, cameraDiffSmoothZ)
+
 screen = <profile> TEX_RES STREAMER_MODE LIGHTNING_FLASHES <empty> <empty> [SHADOWS] [LIGHTING] [COLORS] [POST_PROCESSING] [MISC] [WEATHER] <empty> <empty> [ADVANCED]
 
 screen.POST_PROCESSING =  [TONEMAPPING] [AA_BUFFET] <empty> <empty> LUMINANCE_CONTRAST EXPOSURE POST_SATURATION <empty> <empty> <empty> DITHERING_MODE INVISIBILITY_DISTORTION
@@ -106,7 +111,7 @@ screen.COLORS = [TONEMAPPING] [LIGHT_STRENGTH] BOSS_BATTLE_COLORS VANILLA_LIGHTI
     screen.TONEMAPPING.columns = 1
         screen.NIGHT_EFFECT = USE_NIGHT_EFFECT NIGHT_EFFECT_POINT NIGHT_EFFECT_SATURATION
         screen.NIGHT_EFFECT.columns = 1
-screen.MISC = [STREAMER_SETTINGS] [RIMLIGHT] [FADEOUT] <empty> <empty> <empty> WATER_STYLE <empty> INVISIBILITY_DISTORTION BOSS_BATTLE_COLORS NOISY_LAVA SMOOTH_LAVA <empty> <empty> OUTLINE_THROUGH_BLOCKS OUTLINE_COLOR
+screen.MISC = [STREAMER_SETTINGS] [RIMLIGHT] [FADEOUT] <empty> <empty> <empty> WATER_STYLE LEAVE_WAVING_WAKE INVISIBILITY_DISTORTION BOSS_BATTLE_COLORS NOISY_LAVA SMOOTH_LAVA <empty> <empty> OUTLINE_THROUGH_BLOCKS OUTLINE_COLOR
     screen.STREAMER_SETTINGS = STREAMER_MODE BRIGHT_NETHER LIGHTNING_FLASHES DITHERING_MODE <empty> <empty> RAIN_THICKNESS RAIN_TRANSPARENCY
     screen.STREAMER_SETTINGS.columns = 2
     screen.RIMLIGHT = RIMLIGHT_ENABLED RIMLIGHT_MULT <empty> <empty> RIMLIGHT_PIXEL_RADIUS RIMLIGHT_DIST RIMLIGHT_DYNAMIC_RADIUS RIMLIGHT_OUTLINE
@@ -117,7 +122,7 @@ screen.MISC = [STREAMER_SETTINGS] [RIMLIGHT] [FADEOUT] <empty> <empty> <empty> W
     screen.RESOURCEPACK.columns = 1
 screen.WEATHER = [WIND] [RAIN] [FOG] <empty> <empty> <empty> <empty> [DIMENSION_WEATHER]
 screen.WEATHER.columns = 3
-    screen.WIND = WAVING_ENABLED WIND_STRENGTH_CONSTANT_USER WAVE_STRENGTH_CONSTANT_USER <empty> <empty> <empty> WAVING_WATER_ENABLED WAVING_RAIN_ENABLED WAVING_FULL_BLOCKS_ENABLED
+    screen.WIND = WAVING_ENABLED WIND_STRENGTH_CONSTANT_USER WAVE_STRENGTH_CONSTANT_USER <empty> <empty> <empty> WAVING_WATER_ENABLED WAVING_RAIN_ENABLED WAVING_FULL_BLOCKS_ENABLED LEAVE_WAVING_WAKE
     screen.WIND.columns = 3
     screen.RAIN = NOISY_RAIN RAIN_AMOUNT_USER <empty> <empty> RAIN_THICKNESS RAIN_TRANSPARENCY <empty> <empty> RAIN_FOG
     screen.RAIN.columns = 2
