Improved grass effect

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -91,10 +91,12 @@ uniform.float.eyeBrightnessSmoothFloat=smooth(inSky, 40, 40)
 
 uniform.float.skyTime=clamp(sin(2 * pi * (worldTime - 785) / 24000) + 0.5, 0, 1)
 
-variable.float.cameraDiffSmoothX=smooth(clamp((cameraPosition.x - previousCameraPosition.x) / frameTime, -10.0, 10.0), 6.0, 6.0)
-variable.float.cameraDiffSmoothY=smooth(clamp((cameraPosition.y - previousCameraPosition.y) / frameTime, -10.0, 10.0), 6.0, 6.0)
-variable.float.cameraDiffSmoothZ=smooth(clamp((cameraPosition.z - previousCameraPosition.z) / frameTime, -10.0, 10.0), 6.0, 6.0)
+variable.float.cameraDivOffset=1000
+variable.float.cameraDiffSmoothX=smooth(clamp((cameraPosition.x - previousCameraPosition.x) / (frameTime * cameraDivOffset + 0.01) * cameraDivOffset, -10.0, 10.0), 5, 5)
+variable.float.cameraDiffSmoothY=smooth(clamp((cameraPosition.y - previousCameraPosition.y) / (frameTime * cameraDivOffset + 0.01) * cameraDivOffset, -10.0, 10.0), 5, 5)
+variable.float.cameraDiffSmoothZ=smooth(clamp((cameraPosition.z - previousCameraPosition.z) / (frameTime * cameraDivOffset + 0.01) * cameraDivOffset, -10.0, 10.0), 5, 5)
 uniform.vec3.cameraDiffSmooth=vec3(cameraDiffSmoothX, cameraDiffSmoothY, cameraDiffSmoothZ)
+# uniform.vec3.cameraDiffSmooth=vec3(0.0, 0.0, 7.0)
 
 screen = <profile> TEX_RES STREAMER_MODE LIGHTNING_FLASHES <empty> <empty> [SHADOWS] [LIGHTING] [COLORS] [POST_PROCESSING] [MISC] [WEATHER] <empty> <empty> [ADVANCED]
 
